fix canvas spacing on the page

--- a/layout.css
+++ b/layout.css
@@ -8,6 +8,7 @@
 
 #canvas-container {
   position:relative;
+  height:400px;
   width: 800px;
   margin-left: auto;
   margin-right: auto;
@@ -18,7 +19,6 @@ canvas {
   left: 0px;
   top: 0px;
   display:block;
-  margin:30px auto 0;
 }
 
 .grey {
